gatekeeper/constraints/deny-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatestTag
metadata:
  name: deny-latest
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds:
          - Deployment
          - StatefulSet
          - DaemonSet
          - ReplicaSet
          - rollout
  parameters:
