gatekeeper/constraints/deny-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPNonRootUser
metadata:
  name: deny-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  match:
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
    kinds:
      - apiGroups: ["apps"]
        kinds:
        - Deployment

      - apiGroups: ["argoproj.io"]
        kinds:
        - Rollout
