gatekeeper/constraints/max-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: max-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  enforcementAction: deny

  match:
    kinds:
    - apiGroups: ["apps"]
      kinds:
      - Deployment

  parameters:
    maxReplicas: 5
