gatekeeper/constraints/require-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-limits
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds:
          - Pod
          - deployment
          - rollout

  parameters:
    limits:
      - cpu
      - memory
